# ehKnowledgeBase

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PROGRESS.md  todo.md
sentinel/: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
sentinel/alembic/: env.py
sentinel/alembic/versions/: 0001_initial_schema.py
sentinel/app/: config.py  database.py  main.py  templates_env.py
sentinel/app/api/: feedback.py  sources.py  transcript.py
sentinel/app/models/: __init__.py  chat.py  feedback.py  few_shot.py  job.py  knowledge.py  prompt_version.py  report.py  section.py  source.py
sentinel/app/pages/: dashboard.py  domain_view.py  quality.py  videos.py
sentinel/app/pipeline/: graph.py  state.py
sentinel/app/schemas/: feedback.py  source.py
sentinel/app/services/: embedding.py  llm_client.py  prompt_evolution.py  tracing.py  youtube.py
sentinel/app/templates/: base.html
sentinel/app/workers/: tasks.py
sentinel/docs/: CODE_PATTERNS.md  PROGRESS.md  REQUIREMENTS.md  TEST_CONTEXT.md
sentinel/tasks/: todo.md
sentinel/tests/: conftest.py
sentinel/tests/fixtures/: sample_transcript.txt
sentinel/tests/test_api/: test_dashboard.py  test_domain_view.py  test_feedback.py  test_quality.py  test_sources.py  test_video_detail.py
sentinel/tests/test_integration/: conftest.py  test_db_models.py  test_migration.py
sentinel/tests/test_models/: test_models.py
sentinel/tests/test_pipeline/: test_celery_worker.py  test_node_classify.py  test_node_persist.py  test_node_segment.py  test_node_synthesize.py  test_nodes_extract_preprocess.py  (+3 more)
(+39 files in other folders)
